--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,3 +31,20 @@ body {
     text-wrap: balance;
   }
 }
+/* 
+.swiper-slider {
+  margin-right: 20px;
+} */
+
+.swiper-wrapper {
+  display: flex;
+  justify-items: space-between;
+  /* gap: 44px; */
+  margin: 8px;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-items: center;
+  width: 276px;
+} 
