--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,20 +31,14 @@ body {
     text-wrap: balance;
   }
 }
-/* 
-.swiper-slider {
-  margin-right: 20px;
-} */
 
-.swiper-wrapper {
-  display: flex;
-  justify-items: space-between;
-  /* gap: 44px; */
-  margin: 8px;
+.swiper {
+  width: -webkit-fill-available;
 }
 
 .swiper-slide {
   display: flex;
-  justify-items: center;
-  width: 276px;
-} 
+  justify-content: center;
+  align-items: center;
+  margin: 8px;
+}
